2009-01-18  Sebastien DIAZ  <sebastien.diaz@gmail.com>
        Corrected Bugs
        #25212 	'sort' undeclared
		#25211 	dns.cpp fails with memcpy undeclared
		#25073 	query string is incorrectly parsed, when post enctype is multipart/form-data 
		#24301 	CgiEnvironment constructor fails when posts have zero length
		#23979 	Swapped documentation blocks in CgiUtils.h

2008-06-01  Sebastien DIAZ  <sebastien.diaz@gmail.com>
        Corrected Bugs
        #23341  Instalation cgicc.M4 doesn t support DESDIR 
        #23316  distribute plain file until symbolic link

2008-05-18  Sebastien DIAZ  <sebastien.diaz@gmail.com>
	
	Corrected Bugs
	#23253  Queries with a charset suffix in the content type do not get parsed from Frédéric Sagnes
	#22885  Missing includes in HTMLElement.cpp from  Chris Butler
	#22517  Version 3.2.5 identifies itself as version 3.2.4  
	#22177  Install example/cgicc.m4 per default  from   Tiziano Müller
	#22176  Remove stray @GNUCAP_LDFLAGS@  Fixed  from   Tiziano Müller
	
	Added Patches
	#6510  Queries with a charset suffix in the content type do not get parsed from    Frédéric Sagnes
	#6385  Fix wrong htmldir/docdir handling in doc/Makefile.am  from   Tiziano Müller


2008-01-19  Sebastien DIAZ  <sebastien.diaz@gmail.com>

	* cgicc/CgiUtils.h: Just little change
	* cgicc/HTTPXHTMLHeader.cpp,cgicc/HTTPXHTMLHeader.h,cgicc/XHTMLDoctype.cpp,
	and cgicc/XHTMLDoctype.h, cgicc/XMLDeclaration.h, XMLPI.cpp
	and   XMLPI.h : Add the XHTML support from David Roberts work
	* cgicc/Makefile.am: Change for darwin (apple) test .
	* example/Config.h.in: an empty file just for autogen
	* example/acinclude.m4: more usable make
	* example/autogen: enhance making work
	* example/configure.ac: enhance the making system
	

2007-07-15  Sebastien DIAZ  <sebastien.diaz@gmail.com>

	* demo/cardgame.cpp: A new demo based on a card game with persistance data,AI,Scoring, ...


2007-07-02  Sebastien DIAZ  <sebastien.diaz@gmail.com>
