@@ -4,7 +4,12 @@
         Please send bug reports, suggestions, and comments to
         http://www.gnu.org/software/cgicc/#bug
 ======================================================================
-        Major changes between versions 3.2.7 and 3.2.8
+        Major changes between versions 3.2.8 and 3.2.9
+        ----------------------------------------------
+
+* Correction of bugs   .
+        
+	Major changes between versions 3.2.7 and 3.2.8
         ----------------------------------------------
 
 * Correction of bugs on compilation   .
