@@ -1,3 +1,8 @@
+2009-11-14  Sebastien DIAZ  <sebastien.diaz@gmail.com>
+	Corrected Bugs
+        #26003 : CgiEnvironment getenv
+	#26065 : save function
+	
 2009-01-18  Sebastien DIAZ  <sebastien.diaz@gmail.com>
         Corrected Bugs
         #25212 	'sort' undeclared
